--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,9 +1,10 @@
 name: GitHub Actions Demo
 run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
 on:
-  push:
-    paths-ignore:
-      - '.github/**'
+  # push:
+  #   paths-ignore:
+  #     - '.github/**'
+  workflow_dispatch: # Allows you to run this workflow manually from the Actions tab
 jobs:
   Explore-GitHub-Actions:
     runs-on: ubuntu-latest
